[gd_scene load_steps=2 format=3 uid="uid://p2uyp4a5chae"]

[ext_resource type="Script" uid="uid://li8rdbnhowcn" path="res://ui/ability_selector.gd" id="1_4ni5h"]

[node name="AbilitySelector" type="Control"]
custom_minimum_size = Vector2(1000, 600)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4ni5h")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="SelectedAbilities" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AbilitiesToSelect" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "START LEVEL"

[connection signal="pressed" from="MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
